--- a/PhoneGraphs.html
+++ b/PhoneGraphs.html
@@ -63,11 +63,12 @@
 		</li></TD>
 		<TD width="200"><li>
 		<a href="Battery.html"><h1>Battery</h1></a>
-		</li></TD><TD width="200"><li>
-		<a href="Rear camera.html"><h1>Rear camera</h1></a>
 		</li></TD>
 		<TD width="200"><li>
 		<a href="Front camera.html"><h1>Front camera</h1></a>
+		</li></TD>
+		<TD width="200"><li>
+		<a href="Rear camera.html"><h1>Rear camera</h1></a>
 		</li></TD>
 		
 		
