--- a/Galaxy S7 Edg.html
+++ b/Galaxy S7 Edg.html
@@ -55,7 +55,7 @@
 		<tbody>
 		<tr>
 		<td width="125">
-		<li><a href="Galaxy S7 Edge.html"><h3>Galaxy S7 Edge</h3></a></li>
+	<li><a href="Galaxy S7 Edg.html"><h3>Galaxy S7 Edge</h3></a></li>
 		<li><a href="OnePlus 3.html"><h3>OnePlus 3</h3></a></li>
 		<li><a href="Iphone 7 Plus.html"><h3>Iphone 7 Plus</h3></a></li>
 		<li><a href="Iphone 7.html"><h3>Iphone 7</h3></a></li></td><td width="125">
@@ -98,6 +98,9 @@
 </div>
 
 
+
+
+
 <HR COLOR="#4fff33" WIDTH="100%">
 
 
@@ -124,22 +127,36 @@
 
 <HR COLOR="#4fff33" WIDTH="100%">
 
-<h1 style="color:#4fff33;" align="center";><font size="10">Galaxy S7</font></h1>
-<h1 style="color:#4fff33;" align="center";><font size="6">Height: 142.4mm</font><br/>
-Legnth:69.6mm<br/>
-SIM: Single SIM (Nano-SIM) or Dual SIM <br/>
-Size: 5.1 inches (~72.1% screen-to-body ratio)<br/>
+<h1 style="color:#4fff33;" align="center";><font size="10"></font>Galaxy S7 Edge</h1>
+<h1 style="color:#4fff33;" align="center";><font size="6">Height: 150.9mm </font><br/>
+Legnth: 72.6<br/>
+Weight: 157 g<br/>
+SIM: Yes<br/>
+Size:76.09 %<br/>
 Resolution: 1440 x 2560 pixels <br/>
-Protection:Corning Gorilla Glass 4<br/>
-Operating System: Android OS, v6.0<br/>
-Processor: Quad-core/Octa-core <br/>
-SIM card:  up to 256 GB <br/>
-Camera: 12 MP; 12 MP, f/1.7, 26mm<br/>
-Video: 2160p 30fps<br/>
-3.5mm jack <br/>
-WLAN:Wi-Fi 802.11 a/b/g/n/ac, dual-band, Wi-Fi Direct, hotspot<br/>
-Bluetooth: v4.2, A2DP, LE, aptX<br/>
-GPS:A-GPS, GLONASS, BDS</h1>
+Protection: Gorilla Glass 4 <br/>
+Operating System: Android 6.0<br/>
+Processor: Samsung Exynos 8 Octa 8890 <br/>
+CPU: Octa-core, 2300 MHz, Exynos M1 and ARM Cortex-A53 , 64-bit<br/>
+RAM:4 GB RAM<br/>
+Storage:32 GB <br/>
+Battery: 3600 mAh<br/>
+Rear camera:  12MP <br/>
+Front camera:  5MP <br/>
+Video: 3840x2160 (4K) (30 fps), 1920x1080 (1080p HD) (60 fps), 1280x720 (720p HD) (240 fps) <br/>
+Jack: Yes<br/>
+WLAN: 802.11 a, b, g, n, ac, dual-band, e <br/>
+Bluetooth: 4.2<br/>
+GPS: GPS, A-GPS, Glonass, BeiDou <br/>
+NFC: Yes<br/>
+Radio: FM<br/>
+Compass: Yes <br/>
+Proximity sensor: Yes<br/>
+Accelerometer Yes: <br/>
+Ambient light sensor: Yes<br/>
+Heart rate sensor: Yes<br/>
+Finger print sensor: Yes</h1>
+
 <h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -151,7 +168,6 @@ GPS:A-GPS, GLONASS, BDS</h1>
   ga('send', 'pageview');
 
 </script>
-
 
 </body>
 
