--- a/Storage.html
+++ b/Storage.html
@@ -71,59 +71,24 @@
 	<TABLE width="1000">
 	<TBODY>
 	<TR>
-		<TD width="200"><li><a href="#"><h1>Tablets</h1></a>
-		<ul>
-
-		<li><a href="IpadPro(9.7').html"><h3>IpadPro(9.7')</h3></a></li>
-		<li><a href="TW101.html"><h3>TW101</h3></a></li>
-		<li><a href="Microsoft Surface Book.html"><h3>Microsoft Surface Book</h3></a></li>
-		<li><a href="Lenovo Yoga Tab 3 Pro.html"><h3>Lenovo Yoga Tab 3 Pro</h3></a></li>
-		<li><a href="Nvidia shield K1 Tablet.html"><h3>Nvidia shield K1 Tablet</h3></a></li>
-		
-		</ul></li></TD><TD width="200"><li>
-		<a href="#"><h1>Phones</h1></a>
-		<ul>
-		<table width="250">
-		<tbody>
-		<tr>
-		<td width="125">
-	<li><a href="Galaxy S7 Edg.html"><h3>Galaxy S7 Edge</h3></a></li>
-		<li><a href="OnePlus 3.html"><h3>OnePlus 3</h3></a></li>
-		<li><a href="Iphone 7 Plus.html"><h3>Iphone 7 Plus</h3></a></li>
-		<li><a href="Iphone 7.html"><h3>Iphone 7</h3></a></li></td><td width="125">
-		<li><a href="Pixel XL.html"><h3>Pixel XL</h3></a></li>
-		<li><a href="HTC 10.html"><h3>HTC 10</h3></a></li>
-		<li><a href="LG Nexus 5X.html"><h3>LG Nexus 5X</h3></a></li></td>
-		</ul></li></TD></tr>
-		</tbody>
-		</table>
-		<TD width="200"><li>
-		<a href="#"><h1>TVs</h1></a>
-		<ul>
-		<li><a href="Sony 809C.html"><h3>Sony 809C</h3></a></li>
-		<li><a href="KS7000.html"><h3>KS7000</h3></a></li>
-		<li><a href="Panasonic DX802.html"><h3>Panasonic DX802</h3></a></li>
-		<li><a href="LG OLED E6.html"><h3>LG OLED E6</h3></a></li>
-		<li><a href="Samsung KS 9500.html"><h3>Samsung KS 9500</h3></a></li>
-		</ul></li></TD><TD width="200"><li>
-		<a href="#"><h1>Laptops</h1></a>
-		<ul>
-		<li><a href="Macbook 2016.html"><h3>Macbook 2016</h3></a></li>
-		<li><a href="Razer Blade Stealth 4K.html"><h3>Razer Blade Stealth 4K</h3></a></li>
-		<li><a href="Microsoft Surface Book.html"><h3>Microsoft Surface Book</h3></a></li>
-		<li><a href="Samsung Notebook 9.html"><h3>Samsung Notebook 9</h3></a></li>
-		<li><a href="Dell XPS 13.html"><h3>Dell XPS 13</h3></a></li>
-		</ul></li></TD><TD width="200"><li>
-		<a href="#"><h1>Robots</h1></a>
-		<ul>
-		<li><a href="Coming soon.html"><h3>Coming soon</h3></a></li>
-		<li><a href="Coming soon.html"><h3>Coming soon</h3></a></li>
-		<li><a href="Coming soon.html"><h3>Coming soon</h3></a></li>
-		<li><a href="Coming soon.html"><h3>Coming soon</h3></a></li>
-		<li><a href="Coming soon.html"><h3>Coming soon</h3></a></li>
-		</ul>
+		<TD width="200"><li><a href="#"><h1>Galaxy S7 Edge</h1>
 		</li></TD>
+		<TD width="200"><li><a href="#"><h1>OnePlus 3</h1></a>
+		</li></TD>
+		<TD width="200"><li><a href="#"><h1>Iphone 7 Plus<br/>size</h1></a>
+		</li></TD>
+		<TD width="200"><li><a href="#"><h1>Iphone 7</h1></a>
+		</li></TD>
+		<TD width="200"><li><a href="#"><h1>Pixel XL</h1></a>
+		</li></TD>
+		<TD width="200"><li><a href="#"><h1>HTC 10</h1></a>
+		</li></TD>
+		<TD width="200"><li><a href="#"><h1>Nexus 5X</h1></a>
+		</li></TD>
+		
+		
 		</TR></TBODY></TABLE>
+	
 	</ul>
 
 </div>
