--- a/PhoneGraphs.html
+++ b/PhoneGraphs.html
@@ -1,186 +1,167 @@
-<!Doctype html>
-
-
-
-
-
-
+<!DOCTYPE HTML> 
 <html>
+<meta charset="UTF-8">
+	<head>
+	<style>
+	
+</style>
 
+	<link rel="stylesheet" href="style.css">
+	<title> Electronic Specs</title>
+	</head>
 
-<head>
-
-
-
-
-
-<link href="Styles.css"  type="text/css" rel="stylesheet" />
-
-</head>
-
-
-
-<body bgcolor="#000000">
-
-
-
-
-
-
-
-
-<body>
-
-<h1 style="color:#4fff33;" align="center";><font size="12">Phone Graphs</font></h1>
-
-<div id="nav">
-	<div id="nav_wrapper">
-	<ul>
-	<TABLE width="1000">
-	<TBODY>
-	<TR>
-		<TD width="200"><li><a href="Height.html"><h1> Height</h1></a>
-		</li></TD><TD width="200"><li>
-		<a href="Legnth.html"><h1>Legnth</h1></a>
-		</li></TD>
-		<TD width="200"><li>
-		<a href="Weight.html"><h1>Weight</h1></a>
-		</li></TD><TD width="200"><li>
-		<a href="Ratio.html"><h1>Screen/Body<br/>Ratio</h1></a>
-		</li></TD>
-		<TD width="200"><li>
-		<a href="Resolution.html"><h1>Resolution</h1></a>
-		</li></TD>
+	<body style="background:url(DSC00086.JPG);background-repeat:no-repeat;background-size:100% 100%";>
+	<header>
+		<h1 style="font-size: 500%"; align="center">
+		Phone Graphs
+		</header>
 		
-		
-		</TR></TBODY></TABLE>
-		<TABLE width="1000">
-	<TBODY>
-	<TR>
-		<TD width="250"><li><a href="Ram.html"><h1>Ram</h1></a>
-		</li></TD><TD width="250"><li>
-		<a href="Storage.html"><h1>Storage</h1></a>
-		</li></TD>
-		<TD width="250"><li>
-		<a href="Battery.html"><h1>Battery</h1></a>
-		</li></TD>
-		<TD width="250"><li>
-		<a href="rear camera.html"><h1>Rear camera</h1></a>
-		</li></TD>
-		
-		</TR></TBODY></TABLE>
-		
-	</ul>
-
-</div>
-</div>
-
-
-<HR COLOR="#4fff33" WIDTH="100%">
-
-
-
-
-
-
-
-
-
-
-
-<HR COLOR="#4fff33" WIDTH="60%">
-
-
-
-
-
-
-
-
-
-
-
-<HR COLOR="#4fff33" WIDTH="100%">
-
-<div id="nav">
-	<div id="nav_wrapper">
-	<ul>
-	<TABLE width="1000">
-	<TBODY>
-	<TR>
-		<TD width="200"><li><a href="#"><h1>Tablets</h1></a>
-		<ul>
-
-		<li><a href="IpadPro(9.7').html"><h3>IpadPro(9.7')</h3></a></li>
-		<li><a href="TW101.html"><h3>TW101</h3></a></li>
-		<li><a href="Microsoft Surface Book.html"><h3>Microsoft Surface Book</h3></a></li>
-		<li><a href="Lenovo Yoga Tab 3 Pro.html"><h3>Lenovo Yoga Tab 3 Pro</h3></a></li>
-		<li><a href="Nvidia shield K1 Tablet.html"><h3>Nvidia shield K1 Tablet</h3></a></li>
-		
-		</ul></li></TD><TD width="200"><li>
-		<a href="#"><h1>Phones</h1></a>
-		<ul>
-		<table width="250">
-		<tbody>
-		<tr>
-		<td width="125">
-	<li><a href="Galaxy S7 Edg.html"><h3>Galaxy S7 Edge</h3></a></li>
-		<li><a href="OnePlus 3.html"><h3>OnePlus 3</h3></a></li>
-		<li><a href="Iphone 7 plus.html"><h3>Iphone 7 Plus</h3></a></li>
-		<li><a href="Iphone 7.html"><h3>Iphone 7</h3></a></li></td><td width="125">
-		<li><a href="Pixel XL.html"><h3>Pixel XL</h3></a></li>
-		<li><a href="HTC 10.html"><h3>HTC 10</h3></a></li>
-		<li><a href="LG Nexus 5X.html"><h3>LG Nexus 5X</h3></a></li></td>
-		</ul></li></TD></tr>
-		</tbody>
-		</table>
-		<TD width="200"><li>
-		<a href="#"><h1>TVs</h1></a>
-		<ul>
-		<li><a href="Sony 809C.html"><h3>Sony 809C</h3></a></li>
-		<li><a href="KS7000.html"><h3>KS7000</h3></a></li>
-		<li><a href="Panasonic DX802.html"><h3>Panasonic DX802</h3></a></li>
-		<li><a href="LG OLED E6.html"><h3>LG OLED E6</h3></a></li>
-		<li><a href="Samsung KS 9500.html"><h3>Samsung KS 9500</h3></a></li>
-		</ul></li></TD><TD width="200"><li>
-		<a href="#"><h1>Laptops</h1></a>
-		<ul>
-		<li><a href="Macbook 2016.html"><h3>Macbook 2016</h3></a></li>
-		<li><a href="Razer Blade Stealth 4K.html"><h3>Razer Blade Stealth 4K</h3></a></li>
-		<li><a href="Microsoft Surface Book.html"><h3>Microsoft Surface Book</h3></a></li>
-		<li><a href="Samsung Notebook 9.html"><h3>Samsung Notebook 9</h3></a></li>
-		<li><a href="Dell XPS 13.html"><h3>Dell XPS 13</h3></a></li>
-		</ul></li></TD><TD width="200"><li>
-		<a href="#"><h1>Robots</h1></a>
-		<ul>
-		<li><a href="Coming soon.html"><h3>Coming soon</h3></a></li>
-		<li><a href="Coming soon.html"><h3>Coming soon</h3></a></li>
-		<li><a href="Coming soon.html"><h3>Coming soon</h3></a></li>
-		<li><a href="Coming soon.html"><h3>Coming soon</h3></a></li>
-		<li><a href="Coming soon.html"><h3>Coming soon</h3></a></li>
-		</ul>
-		</li></TD>
-		</TR></TBODY></TABLE>
-	</ul>
-
-</div>
-</div>
-
-</div>
-</div>
-<h3 style="color:#4fff33;" align="center";><font size="6"><a style="color:#4fff33;" href="essay.html">Genetic Modification is bad</a></font></h3><br/>
-<h3 style="color:#4fff33;" align="center";><font size="6"><a href="index.html" style="color:#4fff33">Home</a></font></h3>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-86869458-2', 'auto');
-  ga('send', 'pageview');
-
+		<script>
+function openNav() {
+    document.getElementById("sideNavigation").style.width = "100%";
+    document.getElementById("main").style.marginLeft = "250px";
+}
+ 
+function closeNav() {
+    document.getElementById("sideNavigation").style.width = "0";
+    document.getElementById("main").style.marginLeft = "0";
+}
 </script>
 
-</body>
+	<div id="sideNavigation" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+<h3>
+  <table align="center">
+  <tbody align="center">
+  <tr>
+<td>
+  <a href="Phones.html">Phones</a>
+  </td>
+  <td>
+  <a href="Tablets.html">Tablets</a>
+  </td>
+ 
+  </tr>
+  </tbody>
+  </table>
+</h3>  
+<h4>
+  <table align="center">
+  <tbody align="center">
+  <tr>
+  <td>
+ <a href="Contact.html">Home</a>
+ </tr>
+ </td>
+ </tbody>/
+ </table>
+ </h4>
+  
+</div>
+ 
+<nav class="topnav">
+  <a href="#" onclick="openNav()">
+    <svg width="60" height="60" id="icoOpen" style="opacity: 0.4;">
+        <path d="M0,10 60,10" stroke="#000" stroke-width="10"/>
+        <path d="M0,28 60,28" stroke="#000" stroke-width="10"/>
+        <path d="M0,46 60,46" stroke="#000" stroke-width="10"/>
+    </svg>
+  </a>
+</nav>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+
+
+<TABLE  width="100%">
+<TBODY align="center">
+<TR width="100%">
+ <td width="25%">
+        <table border="0" cellpadding="5" cellspacing=".6">
+        <tr><td bgcolor="#000000" border="green"> <h4 style="color:silver" ;> <font face="Verdana" size="4"><a href="PhoneHeight.html" style="color:silver">Height </a> </font></h4></td><hr align="right" height="10px" width="1px">
+        </tr></table> </td>
+ 
+ <td width="25%">
+        <table border="0" cellpadding="5" cellspacing=".6">
+        <tr><td bgcolor="#000000" border="green"><h4 style="color:#4fff33;" ;><font face="Verdana" size="4"><a href="PhoneWidth.html" style="color:silver"> Width</a></font></h4></td>
+        </tr></table></td>
+ <td width="25%">
+        <table border="0" cellpadding="5" cellspacing=".6">
+        <tr><td bgcolor="#000000" border="green"><h4 style="color:#4fff33;" ;><font face="Verdana" size="4"><a href="PhoneThickness.html" style="color:silver"> Thickness</a></font></h4></td>
+        </tr></table></td>
+ <td width="25%">
+        <table border="0" cellpadding="5" cellspacing=".6">
+        <tr><td bgcolor="#000000" border="green"><h4 style="color:#4fff33;" ;><font face="Verdana" size="4"><a href="PhoneWeight.html" style="color:silver"> Weight</a></font></h4></td>
+        </tr></table></td>
+</tr>
+</tbody>
+</table>
+<hr style=" height: 2px;
+    border-style: ridge;
+    border-color: #900;
+    border-width: 1px 0 0 0;
+    border-radius: 45px;"
+ size="1" align="left" width="100%" color="grey">
+<TABLE  width="100%">
+<TBODY align="center">
+<TR width="100%">
+ <td width="25%">
+        <table border="0" cellpadding="5" cellspacing=".6">
+        <tr><td bgcolor="#000000" border="green"> <h4 style="color:silver" ;> <font face="Verdana" size="4"><a href="PhoneRatio.html" style="color:silver">Ratio </a> </font></h4></td><hr align="right" height="10px" width="1px">
+        </tr></table> </td>
+ 
+ <td width="25%">
+        <table border="0" cellpadding="5" cellspacing=".6">
+        <tr><td bgcolor="#000000" border="green"><h4 style="color:#4fff33;" ;><font face="Verdana" size="4"><a href="PhoneResolution.html" style="color:silver"> Resolution</a></font></h4></td>
+        </tr></table></td>
+ <td width="25%">
+        <table border="0" cellpadding="5" cellspacing=".6">
+        <tr><td bgcolor="#000000" border="green"><h4 style="color:#4fff33;" ;><font face="Verdana" size="4"><a href="PhoneMemory.html" style="color:silver"> Memory</a></font></h4></td>
+        </tr></table></td>
+ <td width="25%">
+        <table border="0" cellpadding="5" cellspacing=".6">
+        <tr><td bgcolor="#000000" border="green"><h4 style="color:#4fff33;" ;><font face="Verdana" size="4"><a href="PhoneRAM.html" style="color:silver"> RAM</a></font></h4></td>
+        </tr></table></td>
+</tr>
+</tbody>
+</table>
+<hr style=" height: 2px;
+    border-style: ridge;
+    border-color: #900;
+    border-width: 1px 0 0 0;
+    border-radius: 45px;"
+ size="1" align="left" width="100%" color="grey">
+<TABLE  width="100%">
+<TBODY align="center">
+<TR width="100%">
+ <td width="25%">
+        <table border="0" cellpadding="5" cellspacing=".6">
+        <tr><td bgcolor="#000000" border="green"> <h4 style="color:silver" ;> <font face="Verdana" size="4"><a href="PhoneFrontCamera.html" style="color:silver">Front<br/>Camera </a> </font></h4></td><hr align="right" height="10px" width="1px">
+        </tr></table> </td>
+ 
+ <td width="25%">
+        <table border="0" cellpadding="5" cellspacing=".6">
+        <tr><td bgcolor="#000000" border="green"><h4 style="color:#4fff33;" ;><font face="Verdana" size="4"><a href="PhoneRearCamera.html" style="color:silver"> Rear<br/>Camera</a></font></h4></td>
+        </tr></table></td>
+ <td width="25%">
+        <table border="0" cellpadding="5" cellspacing=".6">
+        <tr><td bgcolor="#000000" border="green"><h4 style="color:#4fff33;" ;><font face="Verdana" size="4"><a href="PhoneBattery.html" style="color:silver"> Battery</a></font></h4></td>
+        </tr></table></td>
+ <td width="25%">
+        <table border="0" cellpadding="5" cellspacing=".6">
+        <tr><td bgcolor="#000000" border="green"><h4 style="color:#4fff33;" ;><font face="Verdana" size="4"><a href="PhonePrice.html" style="color:silver"> Price</a></font></h4></td>
+        </tr></table></td>
+</tr>
+</tbody>
+</table>
+<hr style=" height: 2px;
+    border-style: ridge;
+    border-color: #900;
+    border-width: 1px 0 0 0;
+    border-radius: 45px;"
+ size="1" align="left" width="100%" color="grey">
+
 
 </html>
